consumer 通过 consul 获取url